[package]
name = "img2text"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[features]
# Enable the `bin`-only deps to facilitate `cargo install`, at cost of
# making it more tedious to use the package as a library. The following are the
# RFCs that will solve this problem:
#
#  - [Allow specifying dependencies for individual artifacts]
#    (https://github.com/rust-lang/rfcs/pull/2887)
#  - [Allow specifying features of the implicit lib dependency]
#    (https://github.com/rust-lang/rfcs/pull/3020)
#
default = ["bin"]

# `bin`-only deps
bin = [
    "env_logger",
    "clap",
    "log",
]

[dependencies]
env_logger = { version = "0.8.1", optional = true }
clap = { version = "3.0.0-beta.2", features = ["wrap_help"], optional = true }
log = { version = "0.4.11", optional = true }
