[workspace]
members = [
    ".",
    "web",
]

[package]
name = "img2text"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
# Enable the `bin`-only deps to facilitate `cargo install`, at cost of
# making it more tedious to use the package as a library. The following are the
# RFCs that will solve this problem:
#
#  - [Allow specifying dependencies for individual artifacts]
#    (https://github.com/rust-lang/rfcs/pull/2887)
#  - [Allow specifying features of the implicit lib dependency]
#    (https://github.com/rust-lang/rfcs/pull/3020)
#
default = ["bin"]

# `bin`-only deps
bin = [
    "anyhow",
    "env_logger",
    "console",
    "image",
    "imageproc",
    "clap",
    "log",
]

[dependencies]
num-integer = { version = "0.1.42", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
env_logger = { version = "0.8.1", optional = true }
# TODO: `imageproc` currently compiles all algorithms. I hope they break them
#       into features...
imageproc = { version = "0.22.0", optional = true }
console = { version = "0.13.0", optional = true }
anyhow = { version = "1.0.34", optional = true }
clap = { version = "3.0.0-beta.2", features = ["wrap_help"], optional = true }
log = { version = "0.4.11", optional = true }

[dev-dependencies]
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"

[build-dependencies]
num-integer = { version = "0.1.42", default-features = false }
num-traits = { version = "0.2.11", default-features = false }

[dependencies.image]
version = "0.23.12"
optional = true
default-features = false
features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "tga",
    "webp",
]