[package]
name = "img2text_web"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = { version = "0.4.17" }
wasm-bindgen = "= 0.2.67"
wasm-logger = { version = "0.2" }
futures = { version = "0.3.12" }
js-sys = { version = "0.3.44" }
serde = { version = "1.0.123" }
log = { version = "0.4.14", features = ["release_max_level_off"] }
yew = { version = "0.17" }

[dependencies.web-sys]
version = "0.3.44"
features = [
    "HtmlImageElement",
    "DataTransfer",
    "DragEvent",
    "Document",
    "Window",
    "File",
]
