[package]
name = "img2text_web"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = { version = "0.4.17" }
wasm-bindgen = "= 0.2.67"
wasm-logger = { version = "0.2" }
imageproc = { version = "0.22.0" }
once_cell = { version = "1.5.2" }
img2text = { path = ".." }
try-lock = { version = "0.2.3" }
futures = { version = "0.3.12" }
js-sys = { version = "0.3.44" }
image = { version = "0.23.12", default-features = false }
serde = { version = "1.0.123" }
log = { version = "0.4.14", features = ["release_max_level_off"] }
yew = { version = "0.17" }

[dependencies.web-sys]
version = "0.3.44"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "DataTransfer",
    "DragEvent",
    "ImageData",
    "Document",
    "Window",
    "File",
]
